samples/_failures_safe/1761725528_99d228_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6d9dc37.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_a6d9dc37.c:182: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_a6d9dc37.c:181:5: error: expected declaration or statement at end of input
  181 |     if
      |     ^~
